# stockMarketTerminal

./: .gitignore  CMakeLists.txt  FinTechInstr.pro  README.md  ThreadsafeQueue.hpp  binance  binance_mod  binance_short  jsonparser.cpp  jsonparser.hpp  main.cpp  startTerminal.bash
include/: InternalStruct.hpp
sources/: jsonparser.cpp
